Revert "Remove the sierra feature"
This reverts commit 49db05c3c5d38f919e82b92842859c63e67352ff.

Required for running on older macOS versions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ appveyor = { repository = "jedisct1/rust-coarsetime" }
 
 [features]
 nightly = []
+sierra = []
 
 [dependencies]
 lazy_static = "1"
